--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.netflix">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="netflix"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
