--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: 2.2.0
-  video_player: 2.2.18
+  video_player: 2.3.0
   bordered_text: ^2.0.0
   flutter_bloc: ^8.0.1
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
   dio: ^4.0.4
+  share_plus: 4.0.3
   dartz: ^0.10.1
   get_it: ^7.2.0
+  intl: 0.17.0
   injectable: ^1.5.3
   freezed_annotation: 
 
